* improved various hashCode() methods * removed unnecessary synchronized locks * refactoring